--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,9 +12,13 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-helmet": "^6.1.0",
     "cors": "^2.8.5",
+    "firebase": "^9.8.4",
+    "firebaseui": "^6.0.1",
     "react": "^18.1.0",
+    "react-admin": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
@@ -50,6 +54,5 @@
     "@types/react-helmet": "^6.1.5",
     "iodash": "^0.0.1-security",
     "lodash": "^4.17.21"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
